# ROBOMUSE_WS

./: .gitignore  99-robomuse-robot-usb.rules  README.md  setup_usb_access.sh
Arduino/new_ultra/: new_ultra.ino
Pictures & Video/lidar moving isue/: simplescreenrecorder-2025-02-04_16.14.18.mkv
diff_robot/launch/: robot.launch.py  robot_rviz_launch.py
diff_robot/urdf/: diff_robot.urdf  robomuse.urdf  robomuse_rviz.rviz  rviz.rviz
esp32_serial/: package.xml  setup.cfg  setup.py
esp32_serial/esp32_serial/: serial_publisher.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/moon_servo/share/moon_servo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
lidar_filter/: package.xml  setup.py
lidar_filter/lidar_filter/: lidar_filter_node.py
log/: latest_build
moon_servo/: motor.py
robomuse_motor_driver/: CMakeLists.txt  README.md  package.xml
robomuse_motor_driver/robomuse_motor_driver/: motor_node.py
robomuse_motor_driver/src/: moon_motor_driver.py  motor_controller.py  motor_node.py  utils.py
robomuse_motor_driver/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robomuse_motor_driver/src/log/: latest_build
robot_bringup/: 21_feb_map.pgm  21_feb_map.yaml  CMakeLists.txt  ab.pgm  ab.yaml  package.xml
robot_bringup/config/: map_server_params.yaml  params.yaml
robot_bringup/launch/: map_launch.py  navigate_robot.py  number_based_goal_selection.py  robomuse_gazebo.launch.py  robomuse_launch.py
rplidar_ros/launch/: rplidar_a2m12_launch.py  view_rplidar_a2m12_launch.py
(+17 files in other folders)
